Adding demo code for Java 12: raw string literals. Java 12 preview doesn't seem to apply to the module however.